2002-06-25  James Henstridge  <james@daa.com.au>

	* gnome-settings-daemon/Makefile.am: commented lines ending in a
	trailing backslash are not a good idea.

2002-06-18  jacob berkman  <jacob@ximian.com>

	* configure.in:
	* archiver/Makefile.am:
	* capplets/common/Makefile.am:
	* control-center/Makefile.am:
	* libbackground/Makefile.am:
	* libwindow-settings/Makefile.am:
	* root-manager/Makefile.am: fixup localedir to work with solaris
	gettext (fixes bug #83616)

2002-06-17  Jody Goldberg <jody@gnome.org>

	* Release 2.0.0

2002-06-04  Yanko Kaneti <yaneti@declera.com>

	* configure.in: (ALL_LINGUAS) Added Bulgarian (bg).

2002-06-02  Seth Nickell  <snickell@stanford.edu>

	* configure.in:

	Create the .pc file for the window manager settings library.

2002-05-29  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: Jody forgot to remove help from the top-level
	Makefile.am as well, removed here

2002-05-29  Jody Goldberg <jody@gnome.org>

	* configure.in : Remove help and help/C

2002-05-16  jacob berkman  <jacob@ximian.com>

	* schemas/apps_gnome_settings_daemon_default_editor.schemas: add a
	key to turn off some behaviour

	* capplets/Makefile.am (always_built_SUBDIRS): 
	* configure.in: re-add default-applications

	fixes #78037

2002-05-14  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:
	* configure.in:

	Move the window setting code into a seperate directory, libwindow-settings
	so it can be shared between the capplet and the settings daemon, and
	potentially, external window managers.
	
2002-05-12  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Require a new libglade.

2002-05-11  Jacob Berkman  <jacob@ximian.com>

	* capplets/Makefile.am (DIST_SUBDIRS): add windows

2002-05-11  Seth Nickell  <snickell@stanford.edu>

	* configure.in:

	Create the windows preference page makefile, and add gnome-desktop 
	to the generic module flags.

Wed May  8 17:54:57 2002  Jonathan Blandford  <jrb@redhat.com>
