@@ -1,3 +1,8 @@
+2002-07-10  Jody Goldberg <jody@gnome.org>
+	patch from Brian Cameron
+
+	* configure.in : look for path to esound
+
 2002-06-25  James Henstridge  <james@daa.com.au>
 
 	* gnome-settings-daemon/Makefile.am: commented lines ending in a
